<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/colorPrimary"
    android:fitsSystemWindows="true"
    tools:context=".Activities.ReadActivity"
    tools:ignore="MergeRootFrame">


    <TextView
        android:id="@+id/breve_desc2"
        android:layout_width="107dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="406dp"
        android:ems="10"
        android:text="Breve descrizione"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/horizontal"
...
            android:text="Didascalia"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />
    </ScrollView>

    <ImageButton
        android:id="@+id/gps"
        android:layout_width="60dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="673dp"
...
